11-kubernetes/service.yml
apiVersion: v1
kind: Service
metadata:
  name: wcg-service
spec:
  type: ClusterIP
  selector:
    app: word-cloud-generator
  ports:
    - port: 80
      targetPort: 8888
